[project]
name = "stackprep-pro"
version = "0.2.4"
description = "stackprep-pro — interview & certification prep MCP server for any AI client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Flavia Fauconnet", email = "flavsferr@gmail.com" }
]
keywords = ["mcp", "interview", "certification", "ai", "prep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/youngpada1/stackprep-pro"
Repository = "https://github.com/youngpada1/stackprep-pro"

[project.scripts]
stackprep-pro = "stackprep_pro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackprep_pro"]
